# scWeave

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: inference.md
examples/: inference.ipynb
examples/training/: training.ipynb  training.md
src/scweave/: __init__.py
src/scweave/evaluation/: __init__.py  hic.py  rna.py
src/scweave/inference/: __init__.py  scweave.py
src/scweave/models/: __init__.py  schic_autoencoder.py  scrnaseq_autoencoder.py  translator.py  utils.py
src/scweave/resources/: __init__.py  human_genes.txt  mouse_genes.txt
src/scweave/training/: __init__.py  dataset.py  trainer.py
src/scweave/utils/: __init__.py  rna.py
