[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scweave"
version = "0.1.0"
description = "Bidirectional deep-learning translation between single-cell RNA-seq gene expression and single-cell Hi-C chromatin structure"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Ghulam Murtaza", email = "gmurtaza@uw.edu" },
]
keywords = [
    "single-cell",
    "hi-c",
    "rna-seq",
    "chromatin",
    "multimodal",
    "deep-learning",
    "bioinformatics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "timm>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "anndata>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/Noble-Lab/scWeave"
Repository = "https://github.com/Noble-Lab/scWeave"
Issues = "https://github.com/Noble-Lab/scWeave/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"scweave.resources" = ["*.txt"]
